--- a/samegame.html
+++ b/samegame.html
@@ -22,7 +22,7 @@
 縦列にある円がすべて消えると、それより右の円がすべて左に移動します。<br><br>
 全部消えると嬉しい気持ちになるかもしれませんが、今のところ特に演出はありません。<br><br>
 
-コードを書いた人：えなじ～(<a href="https://twitter.com/nablaenergy_21">@nablaenergy_21</a>)
+コードを書いた人：えなじ～(<a href="https://twitter.com/nablaenergy_21">@nablaenergy_21</a>)<br>
 開発にあたり、<a href="https://developer.mozilla.org/ja/docs/Games/Workflows/2D_Breakout_game_pure_JavaScript">
 MDN web docs - そのままのJavaScriptを使ったブロックくずしゲーム</a>を参考にさせていただきました。
 </div>
