add some explanations

--- a/mahoujin_editor.html
+++ b/mahoujin_editor.html
@@ -528,7 +528,15 @@ function exportMap(){
 
 <b>エディターの使い方</b><br>
 上のパレットから配置したいオブジェクトをクリックして選び、マップをクリックすると配置できます。<br>
-パレットの何もないマスで消去できます。<br>
+パレットの何もないマスで消去できます。<br><br>
+
+「保存」…現在の盤面を記録します。<br>
+「リセット」…保存した盤面を復元します。<br>
+「書き出し」…現在の盤面をURLとして出力します。<br>
+「クリア判定を行う」…チェックすると、移動時にクリア判定を行います。<br><br>
+
+
+<b>注意点</b><br>
 外周には今のところ何も配置できません。<br>
 マップのサイズも今のところ変えられません(そのうちどうにかしたい)。<br>
 <br>
