add link to mahoujin_editor

--- a/mahoujin.html
+++ b/mahoujin.html
@@ -400,6 +400,8 @@ function keydownEvent(e) {
 すべての魔法陣◎の上に同じ色の魔法石■を乗せてください。<br>
 クリスタル◆の隣に魔法石を置くと、魔法石■の色が変わります。<br><br>
 
+マップを作れる<a href="https://nablaenergy.github.io/games/mahoujin_editor.html">魔法陣エディター</a>もありますのでよかったらお試しください。<br><br>
+
 コードを書いた人：えなじ～(<a href="https://twitter.com/nablaenergy_21">@nablaenergy_21</a>)<br>
 開発にあたり、<a href="https://developer.mozilla.org/ja/docs/Games/Workflows/2D_Breakout_game_pure_JavaScript">
 MDN web docs - そのままのJavaScriptを使ったブロックくずしゲーム</a>を参考にさせていただきました。
